[gd_scene load_steps=17 format=2]

[ext_resource path="res://WorldEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://assets/font.font" type="BitmapFont" id=3]
[ext_resource path="res://LevelContainer.gd" type="Script" id=5]
[ext_resource path="res://assets/spot.png" type="Texture" id=6]
[ext_resource path="res://assets/salt.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 1.42701, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 300, 6, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 588, 0 )
initial_velocity = 360.0
initial_velocity_random = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_random = 0.05
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.52766, 1 )
colors = PoolColorArray( 1, 1, 1, 0.25098, 1, 1, 1, 1, 1, 1, 1, 0.25098 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 300, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
scale = 0.03
scale_random = 0.03
color_ramp = SubResource( 7 )

[sub_resource type="Animation" id=9]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.501961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SubLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, 140 ), Vector2( -95, 150 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SubLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SubLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="LevelContainer" type="Node2D"]
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="SplitTween" type="Tween" parent="."]

[node name="SplitScreen" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 600.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="SplitScreen"]
margin_right = 600.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_lock_": true
}

[node name="Viewport1" type="Viewport" parent="SplitScreen/ViewportContainer1"]
size = Vector2( 600, 300 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera1" type="Camera2D" parent="SplitScreen/ViewportContainer1/Viewport1"]
current = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )

[node name="ViewportContainer2" type="ViewportContainer" parent="SplitScreen"]
margin_top = 300.0
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_lock_": true
}

[node name="Viewport2" type="Viewport" parent="SplitScreen/ViewportContainer2"]
size = Vector2( 600, 300 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2" type="Camera2D" parent="SplitScreen/ViewportContainer2/Viewport2"]
current = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )

[node name="FrozenView" type="Node2D" parent="."]

[node name="SplitLine" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 300, 300 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 600, 4 )

[node name="SplitParticles" type="Particles2D" parent="."]
position = Vector2( 300, 300 )
emitting = false
amount = 64
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 6 )

[node name="SplitParticles2" type="Particles2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 300, 300 )
z_index = 7
emitting = false
amount = 64
lifetime = 2.0
preprocess = 0.5
randomness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 6 )

[node name="LevelCompleteView" type="Node2D" parent="."]
light_mask = 0
z_index = 4

[node name="ColorRect" type="ColorRect" parent="LevelCompleteView"]
light_mask = 0
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelCompleteView"]
light_mask = -2147483648
margin_left = -95.0
margin_top = 150.0
margin_right = 505.0
margin_bottom = 303.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Reunited!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubLabel" type="Label" parent="LevelCompleteView"]
modulate = Color( 1, 1, 1, 0 )
light_mask = -2147483648
margin_top = 245.0
margin_right = 600.0
margin_bottom = 398.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press Enter to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelCompleteView"]
anims/Darken = SubResource( 9 )
anims/Lighten = SubResource( 10 )

[connection signal="tween_all_completed" from="SplitTween" to="." method="_on_SplitTween_tween_all_completed"]
